<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/r4b_bkg"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo_cerveza" />
        
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView android:id="@+id/r4b_edit_str1"
                android:text="@string/r4b_editar_carrera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/r4b_add_str1"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

            <include layout="@layout/fragment_run4beer_form"/>

            <Button
                android:id="@+id/editarCarrera"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/btn"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"

                android:text="@string/r4b_editar_carrera" />

            <Button
                android:id="@+id/cancelarCarrera"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/btn"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/r4b_cancelar_carrera" />

            <Button
                android:id="@+id/borrarCarrera"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/btneliminar"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/r4b_borrar_carrera" />

	</LinearLayout>
</FrameLayout>
