<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/r4b_bkg"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_cerveza" />
<!--
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:scaleType="fitEnd"
        android:contentDescription="@string/r4b_bkg"
        android:src="@drawable/pasaporte_abajo" />
-->


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView02"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pasaporte_margin_top"
        android:layout_marginRight="@dimen/pasaporte_margin"
        android:layout_marginLeft="@dimen/pasaporte_margin"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_pasaporte_cervecero"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/r4b_bkg"
            android:src="@drawable/pasaporte_cervecero" />


        <EditText android:id="@+id/pasaporteCodigo"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/pasaporte_codigo_margin"
            android:layout_marginBottom="@dimen/pasaporte_codigo_margin"
            android:layout_below="@+id/img_pasaporte_cervecero"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="@dimen/r4b_add_kilometrosRecorridos"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/pasaporte_botones"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pasaporteCodigo" >

            <Button
                android:id="@+id/verificarCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/btn"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/pasaporte_verificar" />

            <Button
                android:id="@+id/verSellos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/btn"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/pasaporte_ver_sellos" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
</FrameLayout>
